<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">System Updates</string>
    <string name="action_settings">Settings</string>
    <string name="lblDevice">Device</string>
    <string name="txtDevice">Device</string>
    <string name="lblVendor">Vendor</string>
    <string name="txtVendor">Vendor</string>
    <string name="lblRom">Rom</string>
    <string name="txtRom">Rom</string>
    <string name="lblVersion">Version</string>
    <string name="txtVersion">Version</string>
    <string name="errorNotFound">Not found</string>
    <string name="ntfTitleNVTxt">Update available</string>
    <string name="msgDownInit">Download started</string>
    <string name="msgDownFinished">Download finished</string>
    <string name="msgErrorVersion">Failed to obtain the latest version</string>
    <string name="msgNoPossibleConnect">"Can\'t connect to server, please try again later"</string>
    <string name="msgNoNeedUpdate">Already have the latest version</string>
    <string name="msgCheckUpdate">Check for updates</string>
    <string name="msgUpdateFound">Download Update</string>
    <string name="txtActualVersion">Installed Version</string>
    <string name="txtNewVersion">New</string>
    <string name="title_activity_details">Update Details</string>
    <string name="lblChangelog">Changelog:</string>
    <string name="txtDownloading">Downloading...</string>
    <string name="txtCheckUpd">Checking for updates...</string>
    <string name="txtInstallUpd">Install update</string>
    <string name="msgDownFailed">Incorrect download, please try again</string>
    <string name="notificacionChkNews">Check for updates</string>
    <string name="txtTimeInterval">Check time interval</string>
    <string name="msgTitleInstall">Installation mode</string>
    <string name="msgTextInstall">Auto: Auto mode install the ota automatically, depending on the recovery you have currently installed this mode may not work correctly \nManual: You reboot into recovery and you must install zip located at: \n</string>
    <string name="msgInstallManual">Manual</string>
    <string name="msgInstallAuto">Auto</string>
    <string name="txtOnlyWifi">Download only by WiFi</string>
    <string name="msgNoWifi">You are not connected to a WiFi network, please connect to and try again</string>
    <string name="msgNoInet">No internet connection</string>
    <string name="social">Social</string>
    <string name="share">Share</string>
    <string-array name="time">
        <item>"Every day"</item>
        <item>"Every week"</item>
        <item>"Every 15 days"</item>
        <item>"Every month"</item>
    </string-array>
    <string-array name="time_values" translatable="false">
        <item>"86400000"</item>
        <item>"604800000"</item>
        <item>"1296000000"</item>
        <item>"2592000000"</item>
    </string-array>
</resources>
