<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/notificacionChkNews" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"
                android:actionProviderClass=
                    "android.widget.ShareActionProvider"/>
        </menu>
    </item>

</menu>
