<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity"
    tools:showIn="@layout/app_bar_config"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtTimeInterval"
        android:id="@+id/lblTimeInterval" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnTimeInterval"
        android:layout_gravity="center_vertical|left"
        android:visibility="visible"
        android:layout_weight="0.03" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificacionChkNews"
        android:id="@+id/notificacionChkNews"
        android:paddingTop="20dp"
        android:paddingBottom="5dp" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtOnlyWifi"
        android:id="@+id/chkOnlyWifi"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:checked="false"
        android:paddingBottom="5dp" />


</LinearLayout>
</ScrollView>